Add logout button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <h1 id="welcome">Selamat Datang</h1>
+  <button id="logout-btn">Logout</button>
   <form id="bmi-form">
     <label for="berat-badan">Berat Badan:</label>
     <input type="number" id="berat-badan" placeholder="BB (kg)" min="0" max="200" required>
