--- a/login.html
+++ b/login.html
@@ -4,15 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Login - BMI Calculator</title>
 </head>
 
 <body>
-  <h1>Halaman Login</h1>
-  <form id="login-form">
-    <input type="text" placeholder="Username" id="username">
-    <button type="submit">Submit</button>
-  </form>
+  <div class="container bg-light d-flex justify-content-center align-items-center my-4 rounded shadow-lg"
+    style="height: 90vh;">
+    <div class="card w-50 mx-auto p-5">
+      <h1 class="text-center">Login</h1>
+      <form id="login-form" class="form d-flex flex-column align-items-center justify-content-center gap-3">
+        <input type="text" placeholder="Masukkan username" id="username" class="form-control w-75" required>
+        <button type="submit" class="btn btn-primary w-75">Submit</button>
+      </form>
+    </div>
+  </div>
   <script src="./login.js">
   </script>
 </body>
