--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <title>BMI Calculator</title>
 </head>
 
+<!-- <body class="bg-light" style="background-image: url('./background.webp'); background-repeat: no-repeat; 
+background-attachment: fixed; background-size: cover;"> -->
+
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg bg-primary shadow-lg fixed-top mb-5" style="opacity: 0.9;">
     <div class="container-fluid d-flex justify-content-between align-items-center">
@@ -22,8 +25,12 @@
     </div>
   </nav>
   <div class="container d-flex justify-content-center align-items-center flex-column" style="margin-top: 100px;">
+    <!-- <form id="bmi-form"
+      class="bg-dark d-flex flex-column align-items-center justify-content-center gap-3 border rounded p-5 shadow w-50"
+      style="opacity: 0.8;"> -->
     <form id="bmi-form"
-      class="form d-flex flex-column align-items-center justify-content-center gap-3 border rounded p-5 shadow w-50">
+      class="d-flex flex-column align-items-center justify-content-center gap-3 border rounded p-5 shadow w-50"
+      style="height: 400px;">
       <div class="form-floating w-75">
         <input type="number" class="form-control" id="berat-badan" placeholder="BB (kg)" min="0" max="200" required>
         <label for="berat-badan" class="form-label">Weight (kg)</label>
@@ -32,12 +39,16 @@
         <input type="number" class="form-control" id="tinggi-badan" placeholder="TB (cm)" min="0" max="300" required>
         <label for="tinggi-badan" class="form-label">Height (cm)</label>
       </div>
+      <div class="form-floating w-75">
+        <input type="date" class="form-control" id="date" required>
+        <label for="date" class="form-label">Date</label>
+      </div>
       <div class="w-75">
         <button type="submit" class="btn btn-outline-primary w-100">
           <i class="bi bi-calculator-fill"></i>
           Calculate
         </button>
-        <p id="notif" class="text-danger text-center fst-italic"></p>
+        <p id="notif" class="text-danger text-center fst-italic"><small>Please input your weight and height</small></p>
       </div>
     </form>
     <div id="bmi-result" class="w-50 mt-5">
