--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
   <title>BMI Calculator</title>
 </head>
 
-<!-- <body class="bg-light" style="background-image: url('./background.webp'); background-repeat: no-repeat; 
-background-attachment: fixed; background-size: cover;"> -->
-
 <body class="bg-light">
   <nav class="navbar navbar-expand-lg bg-primary shadow-lg fixed-top mb-5" style="opacity: 0.9;">
     <div class="container-fluid d-flex justify-content-between align-items-center">
@@ -25,9 +22,6 @@ background-attachment: fixed; background-size: cover;"> -->
     </div>
   </nav>
   <div class="container d-flex justify-content-center align-items-center flex-column" style="margin-top: 100px;">
-    <!-- <form id="bmi-form"
-      class="bg-dark d-flex flex-column align-items-center justify-content-center gap-3 border rounded p-5 shadow w-50"
-      style="opacity: 0.8;"> -->
     <form id="bmi-form"
       class="d-flex flex-column align-items-center justify-content-center gap-3 border rounded p-5 shadow w-50"
       style="height: 400px;">
@@ -51,7 +45,7 @@ background-attachment: fixed; background-size: cover;"> -->
         <p id="notif" class="text-danger text-center fst-italic"><small>Please input your weight and height</small></p>
       </div>
     </form>
-    <div id="bmi-result" class="w-50 mt-5">
+    <div id="bmi-result" class="w-50 my-5">
       <table class="table table-success table-striped" id="bmi-table">
         <thead>
           <tr>
@@ -71,6 +65,44 @@ background-attachment: fixed; background-size: cover;"> -->
       </div>
     </div>
   </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="bmiModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Update Data BMI</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body bg-light">
+          <form id="bmi-form"
+            class="d-flex flex-column align-items-center justify-content-center gap-3 border rounded p-5 shadow w-100"
+            style="height: 300px;">
+            <p id="update-tanggal" class="text-center"></p>
+            <p id="update-id" class="d-none"></p>
+            <div class="form-floating w-100">
+              <input type="number" class="form-control" id="berat" placeholder="BB (kg)" min="0" max="200" required>
+              <label for="berat" class="form-label">Weight (kg)</label>
+            </div>
+            <div class="form-floating w-100">
+              <input type="number" class="form-control" id="tinggi" placeholder="TB (cm)" min="0" max="300" required>
+              <label for="tinggi" class="form-label">Height (cm)</label>
+            </div>
+            <div class="w-100">
+              <p id="update-notif" class="text-danger text-center fst-italic d-none">
+                <small>Please input your weight and height</small>
+              </p>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="save-update">Save</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="./script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
