--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" id="save-update">Save</button>
+          <button type="button" class="btn btn-primary" id="save-update" data-bs-dismiss="modal">Save</button>
         </div>
       </div>
     </div>
