--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
   </div>
 
-  <!-- Modal -->
+  <!-- Update Modal -->
   <div class="modal fade" id="bmiModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -103,6 +103,38 @@
     </div>
   </div>
 
+  <!-- Delete Modal -->
+  <div class="modal fade" id="notif-delete" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+    <div class="modal-dialog bg-light">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="ModalLabel">Delete Data</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>Yakin anda ingin menghapus data?</p>
+          <p id="delete-id" class="d-none"></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary" id="yes-delete" data-bs-dismiss="modal"
+            onclick="deleteData()">Yes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div id="toast-add-data" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-header bg-primary">
+        <strong class="me-auto"><i class="bi bi-clipboard2-check-fill"></i> Notification</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+      <div class="toast-body">
+        Data BMI berhasil ditambahkan.
+      </div>
+    </div>
+  </div>
   <script src="./script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
