--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
   <div class="container bg-light d-flex justify-content-center align-items-center my-4 rounded shadow-lg"
     style="height: 90vh;">
     <div class="card bg-light w-50 mx-auto p-5 shadow-lg rounded">
+      <img src="./login.jpg" alt="login" class="img-fluid mx-auto my-2" style="width: 200px; height: 200px;">
       <h4 class="text-center">Welcome to BMI Calculator</h4>
       <form id="login-form" class="form d-flex flex-column align-items-center justify-content-center gap-3">
         <input type="text" placeholder="Enter your username" id="username" class="form-control w-75" minlength="3"
