--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
 </head>
 
 <body class="bg-primary">
+  <!-- Isi data username untuk login pertama kali -->
   <div class="container bg-light d-flex justify-content-center align-items-center my-4 rounded shadow-lg"
     style="height: 90vh;">
     <div class="card bg-light w-50 mx-auto p-5 shadow-lg rounded">
