--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <div>
         <span id="welcome" class="navbar-text text-light h6 mx-3"></span>
         <button class="btn btn-outline-light btn-sm" id="logout-btn"><i class="bi bi-box-arrow-in-right"></i>
-          Logout</button>
+          Reset
+        </button>
       </div>
     </div>
   </nav>
