--- a/index.html
+++ b/index.html
@@ -8,9 +8,43 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="icon" type="image/x-icon" href="./hacktiv8.jpeg">
   <title>BMI Calculator</title>
+  <style>
+    [class*="col-"] {
+      width: 100%;
+    }
+
+    body {
+      background-image: url(https://img.freepik.com/free-vector/clean-medical-background_53876-116877.jpg);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+    }
+
+    @media only screen and (min-width: 600px) {
+
+      #bmi-form {
+        width: 50%;
+      }
+
+      .col-1 div {
+        width: 50%;
+        height: fit-content;
+      }
+
+      .col-2 {
+        width: 50%;
+      }
+    }
+
+    #image-status {
+      width: 150px;
+      height: fit-content;
+      text-align: end;
+    }
+  </style>
 </head>
 
-<body class="bg-light">
+<body>
   <nav class="navbar navbar-expand-lg bg-primary shadow-lg fixed-top mb-5" style="opacity: 0.9;">
     <div class="container-fluid d-flex justify-content-between align-items-center">
       <a class="navbar-brand text-light" href="./index.html">BMI Calculator</a>
@@ -23,7 +57,7 @@
   </nav>
   <div class="container d-flex justify-content-center align-items-center flex-column" style="margin-top: 100px;">
     <form id="bmi-form"
-      class="d-flex flex-column align-items-center justify-content-center gap-3 border rounded p-5 shadow w-50"
+      class="d-flex flex-column align-items-center justify-content-center gap-3 border rounded p-5 shadow col-1"
       style="height: 400px;">
       <div class="form-floating w-75">
         <input type="number" class="form-control" id="berat-badan" placeholder="BB (kg)" min="0" max="200" required>
@@ -45,7 +79,12 @@
         <p id="notif" class="text-danger text-center fst-italic"><small>Please input your weight and height</small></p>
       </div>
     </form>
-    <div id="bmi-result" class="w-50 my-5">
+    <div id="hide" class="w-50 my-4 shadow-lg border rounded" style="display: none; height: 150px;">
+      <img src="https://img.freepik.com/free-vector/people-eating-healthy-exercising-regularly_53876-59882.jpg"
+        id="image-status" class="rounded">
+      <span id="text-bmi-status"></span>
+    </div>
+    <div id="bmi-result" class="my-4 col-2">
       <table class="table table-success table-striped" id="bmi-table">
         <thead>
           <tr>
