responsive text pop up

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       .col-2 {
         width: 50%;
       }
+
     }
 
     #image-status {
@@ -94,7 +95,7 @@
     </form>
 
     <!-- status hide and pop -->
-    <div id="hide" class="w-50 my-4 shadow-lg border rounded " style="display: none; height: 150px;">
+    <div id="hide" class="col-2 my-4 shadow-lg border rounded" style="display: none; height: 150px;">
       <div class="flex-text">
         <img src="https://img.freepik.com/free-vector/people-eating-healthy-exercising-regularly_53876-59882.jpg"
           id="image-status" class="rounded">
@@ -103,7 +104,7 @@
     </div>
 
     <!-- Menampilkan data BMI -->
-    <div id="bmi-result" class="my-4 col-2">
+    <div id="bmi-result" class="my-4 col-3">
       <table class="table table-success table-striped" id="bmi-table">
         <thead>
           <tr>
