--- a/login.html
+++ b/login.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="./hacktiv8.jpeg" />
+    <title>Login - BMI Calculator</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="./hacktiv8.jpeg">
-  <title>Login - BMI Calculator</title>
-</head>
-
-<body class="bg-primary">
-  <div class="container bg-light d-flex justify-content-center align-items-center my-4 rounded shadow-lg"
-    style="height: 90vh;">
-    <div class="card bg-light w-50 mx-auto p-5 shadow-lg rounded">
-      <h4 class="text-center">Welcome to BMI Calculator</h4>
-      <form id="login-form" class="form d-flex flex-column align-items-center justify-content-center gap-3">
-        <input type="text" placeholder="Enter your username" id="username" class="form-control w-75" minlength="3"
-          maxlength="15" required>
-        <button type="submit" class="btn btn-outline-primary w-75">Submit</button>
-      </form>
+  <body class="bg-primary">
+    <div class="container bg-light d-flex justify-content-center align-items-center my-4 rounded shadow-lg" style="height: 90vh">
+      <div class="card bg-light w-50 mx-auto p-5 shadow-lg rounded">
+        <h4 class="text-center">Welcome to BMI Calculator</h4>
+        <form id="login-form" class="form d-flex flex-column align-items-center justify-content-center gap-3">
+          <input type="text" placeholder="Enter your username" id="username" class="form-control w-75" minlength="3" maxlength="15" required />
+          <button type="submit" class="btn btn-outline-primary w-75">Submit</button>
+        </form>
+      </div>
     </div>
-  </div>
-  <script src="./login.js">
-  </script>
-</body>
-
+    <script src="./login.js"></script>
+  </body>
 </html>
